添加webView加载进度条

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'me.yokeyword:fragmentation:1.1.8'
     //
     implementation 'com.github.vondear:RxTools:v1.7.6.4'
+    //进度条
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
 }
