--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     //Recycler适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     compile 'com.android.support:recyclerview-v7:23.1.1' //RecyclerView
+    //
+    compile 'com.github.vondear:RxTools:v1.7.6.4'//请替换成上方 JitPack 最新的版本号
 }
