--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     //日志拦截器
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     //
+    compile 'com.orhanobut:logger:2.1.1'
+    //
     //
     implementation 'org.greenrobot:eventbus:3.0.0'
     //Rxjava+Retrofit
@@ -54,7 +56,6 @@ dependencies {
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     //Recycler适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
-//    compile 'com.android.support:recyclerview-v7:23.1.1' //RecyclerView
     //
     compile 'com.github.vondear:RxTools:v1.7.6.4'//请替换成上方 JitPack 最新的版本号
     //材料设计
